# yandex-algorithms

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md
.github/workflows/: run-tests.yml
src/yandex_algorithms/: __init__.py  __main__.py  cli.py  commands.py  config.py  templates.py  unit.py  utils.py
src/yandex_algorithms/modules/: __init__.py
src/yandex_algorithms/modules/contestyandex/: __init__.py  commands.py  config.py  contest_api.py  oauth_api.py  utils.py
tests/: conftest.py
tests/example_dir/: .cfg  conftest.py
tests/example_dir/inputs/: A
tests/yandex_algorithms/: test_cli.py  test_commands.py  test_config.py  test_unit.py  test_utils.py
tests/yandex_algorithms/contestyandex/: api_response.py  conftest.py  test_contest_api.py  test_contest_commands.py  test_oauth_api.py
